#230 Fix invisible item-details.

--- a/src/scss/components/item/_details.scss
+++ b/src/scss/components/item/_details.scss
@@ -19,8 +19,8 @@
 		}
 
 		.search-results & {
-			opacity: 0;
-			transition: opacity $fade-transition;
+			//opacity: 0;
+			//transition: opacity $fade-transition;
 		}
 	}
 
